@@ -260,6 +260,7 @@ importFrom(SummarizedExperiment,colData)
 importFrom(SummarizedExperiment,rowData)
 importFrom(SummarizedExperiment,rowRanges)
 importFrom(ape,cophenetic.phylo)
+importFrom(ape,drop.tip)
 importFrom(ape,is.rooted)
 importFrom(ape,keep.tip)
 importFrom(ape,node.depth)
