@@ -525,7 +525,8 @@ setMethod("estimateFaith", signature = c(x="TreeSummarizedExperiment", tree="mis
     present <- unname(split(present_combined, split_present))
     
     # If there were samples without any taxa present/absent, the length of the
-    # list is not the number of samples. Add empty samples.
+    # list is not the number of samples since these empty samples are missing.
+    # Add empty samples as NULL.
     names(present) <- names(which(colSums2(mat) > 0))
     present[names(which(colSums2(mat) == 0))] <- list(NULL)
     present <- present[colnames(mat)]
@@ -533,50 +534,45 @@ setMethod("estimateFaith", signature = c(x="TreeSummarizedExperiment", tree="mis
     # Assign NA to all samples
     faiths <- rep(NA,length(samples))
     
-    # If all the taxa are present, then faith is the sum of lengths of 
-    # all edges in taxa tree
-    faiths[lengths(present) == nrow(mat)] <- sum(tree$edge.length)
-
-    # If there are taxa that are not present:
-    
-    # 1 If there are no taxa present, then faith is 0
+    # If there are no taxa present, then faith is 0
     ind <- lengths(present) == 0
     faiths[ind] <- 0
     
-    # # 2 If there is only one taxon present, then faith is the age of taxon
-    # # could be calculated similarly to other samples with different number of
-    # # absent taxa, but this allows vectorization.
-    # # --> Find taxon from labels --> get its tip label index. The edge df
-    # # tells edges between two indices. Find the edge between root and certain
-    # # taxon; get its index. --> Find the length of that edge.
-    # ind <- lengths(present) == 1
-    # if( any(ind) ){
-    #     # Find index of edge of individual tip
-    #     edge_ind <-  sapply(present[ind], function(x) which(tree$edge[, 2] == which(tree$tip.label == x)))
-    #     faiths[ind] <- tree$edge.length[edge_ind]
-    # }
-    # # There are some rows that are not in tip but they are nodes. 
-    # # 3 If several taxa is present
-    
     # If there are taxa present
     ind <- lengths(present) > 0
-    # kep only present taxa
-    faiths_for_trees <- lapply(present[ind], function(x){
+    # Loop through taxa that were found from each sample
+    faiths_for_taxa_present <- lapply(present[ind], function(x){
+        # Trim the tree
         temp <- .prune_tree(tree, x)
+        # Sum up all the lengths of edges
         temp <- sum(temp$edge.length)
         return(temp)
     })
-    faiths[ind] <- unlist(faiths_for_trees)
-    # and faith is calculated based on the subset tree
-    # faiths[ind] <- vapply(trees, function(t){sum(t$edge.length)},numeric(1))
-
+    faiths_for_taxa_present <- unlist(faiths_for_taxa_present)
+    faiths[ind] <- faiths_for_taxa_present
     return(faiths)
 }
 
+# This function trims tips until all tips can be found from provided set of nodes
+#' @importFrom ape drop.tip
 .prune_tree <- function(tree, nodes){
+    # Get those tips that can not be found from provided nodes
     remove_tips <- tree$tip.label[!tree$tip.label %in% nodes]
+    # As long as there are tips to be dropped, run the loop
     while( length(remove_tips) > 0 ){
-        tree <- ape::drop.tip(tree, remove_tips, trim.internal = FALSE, collapse.singles = FALSE)
+        # Drop tips that cannot be found. Drop only one layer at the time. Some
+        # dataset might have taxa that are not in tip layer but they are higher
+        # higher rank. IF we delete more than one layer at the time, we might
+        # loose the node for those taxa. --> The result of pruning is a tree
+        # whose all tips can be found provided nodes i.e., rows of TreeSE. Some
+        # taxa might be higher rank meaning that all rows might not be in tips
+        # even after pruning; they have still child-nodes.
+        tree <- drop.tip(tree, remove_tips, trim.internal = FALSE, collapse.singles = FALSE)
+        # If all tips were dropped, the result is NULL --> stop loop
+        if( is.null(tree) ){
+            break
+        }
+        # Again, get those tips of updated tree that cannot be found from provided nodes
         remove_tips <- tree$tip.label[!tree$tip.label %in% nodes]
     }
     return(tree)
