@@ -89,3 +89,4 @@ Changes in version 1.9.x
 + Export mergeFeaturesByRank
 + *RDA & *CCA: scores parameter for specifying output
 + Improve mergeSEs and loadFromBiom
++ Faith index: bugfix
